--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>maventestservice</module>
-        <module>mvntestweb</module>
+        <module>mvntestweb1</module>
     </modules>
 
 
